k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  namespace: habitrace
spec:
  selector:
    app: client
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
