k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: habitrace
spec:
  selector:
    app: server
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  type: ClusterIP
