k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habitrace-ingress
  namespace: habitrace
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "server-svc"
spec:
  ingressClassName: nginx
  rules:
    - host: habitrace.localtest.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-svc
                port:
                  number: 4000
          - path: /socket.io
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-svc
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 80
